Oath login with google fixed (error when reloading page)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.3.3",
     "@mdi/font": "7.4.47",
     "core-js": "^3.37.1",
     "jwt-decode": "^4.0.0",
